Another quick NPE fix